--- a/frontend/chi-tiet-tin-tuc.html
+++ b/frontend/chi-tiet-tin-tuc.html
@@ -10,7 +10,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
-	<title>BUSINESS BNC</title>
+	<title>Chi Tiết Tin Tức</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="robots" content="index,follow" />
@@ -29,13 +29,13 @@
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
 </head>
-<body class="hidden-sn blue-skin animated">
+<body class="">
 
 	<div class="wrapper">
 		<header id="header">
 				<div class="block-header-mobile">
 				    <a class="mmmenua" href="#menu"><i class="fa fa-bars" aria-hidden="true"></i></a>
-				    <nav id="menu">
+				     <nav id="menu">
 						<ul class="navAjax" data-active="active" data-e="li">
 							<li class="nav-item">
 								<a id="a-mb" class="nav-link" href=".">Home</a>
@@ -114,110 +114,16 @@
 		</header><!-- /#header -->
 
 		<section id="main">
-			<section class="block block-slider wow fadeInUp">
-				<div class="owl-carousel dotsData" data-nav="true" data-margin="0" data-items='1' data-autoplayTimeout="700" data-autoplay="false" data-loop="true">
-					<div class="item-slide" data-dot="1">
-						<img src="images/slider/divergence-trading-1501990284.jpg" alt="slide1">
-					</div>
-					<div class="item-slide" data-dot="2">
-						<img src="images/slider/dynamic-outcomes-banner-1501990284.jpg" alt="slide1">
-					</div>
-				</div>
-			</section><!-- /.block-slider -->
-			<section class="block block-aboutus">
-				<div class="block-title wow fadeInUp">
+			<section class="block-page-news">
+				<div class="block-news-detail">
 					<div class="container">
-						<h2 class="title-sec" data-wow-delay=".4s">Content</h2>
-					</div>
-				</div>
-				<div class="block-parallax block-parallax-img wow fadeInRight">
-					<div class="block-content wow fadeInRight">
-						<div class="container">
-							<p>BNC coin is a leading provider of online foreign exchange (BNC ) trading, CFD trading, spread betting and related services. Our mission is to inspire global traders with access to the world's largest and most liquid market. By offering the most innovative trading tools, hiring the best trading educators, and meeting strict financial standards to protect trader funds, we strive for the best online trading experience in the market.a</p>
-							<p>With a lot of employees, we are in many countries and are regulated across four entities.</p>
-							<p>We have 15 years of award-winning BNC trading services.<br>
-							Our No Dealing Desk (NDD) execution model is competitive, transparent and fair.</p>
-							<p>At BNC, we are dedicated to serving our clients responsibly with the latest innovations in BNC tools and resources to assist you in trading. Below we underline the active promotions, bonuses and special offers available to traders. To take advantage of one of the offers listed below, simply register for an account, if you do not have one yet open with BNC, and contact your account manager for more information .</p>
-							<p><strong>Here’s how </strong>BNC<strong>Trading with </strong>BNC<strong> will enhance your trading experience:</strong></p>
-							<ul>
-								<li>Best-in-class customer service, including live chat</li>
-								<li>One-hour response time for sales and support requests</li>
-								<li>Multiple asset trading and ECN accounts on MT4</li>
-								<li>Superior quality of execution (speed and reliability)</li>
-								<li>Deep liquidity from Tier-1 banks</li>
-								<li>Islamic (Swap Free) accounts</li>
-							</ul>
+						<div class="row">
+							<h2>INSTANT WITHDRAWALS</h2>
 						</div>
 					</div>
-				</div>
-			</section><!-- /.block-aboutus -->
-			<section class="block block-whychose">
-				<div class="container">
-					<div class="col-xs-12 col-sm-6 pull-right wow fadeInLeft">
-						<iframe width="100%" height="305" src="https://www.youtube.com/embed/Um63OQz3bjo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-					</div>
-					<div class="col-xs-12 col-sm-6 wow fadeInRight">
-						<p>Why chose us??</p>
-						<p>With a lot of employees, we are in many countries and are regulated across four entities.</p>
-						<p>We have 15 years of award-winning forex trading services.<br>
-						Our No Dealing Desk (NDD) execution model is competitive, transparent and fair.</p>
-						<p>At Forexcoin, we are dedicated to serving our clients responsibly with the latest innovations in forex tools and resources to assist you in trading. Below we underline the active promotions, bonuses and special offers available to traders. To take advantage of one of the offers listed below, simply register for an account, if you do not have one yet open with Forexcoin, and contact your account manager for more information .</p>
-					</div>
-				</div>
-			</section><!-- /.block-whychose -->
-			<section class="block block-whytrade">
-				<div class="block-parallax block-parallax-img">
-					<div class="block-content">
-						<div class="container">
-							<div class="row">
-								<div class="col-xs-12 col-sm-6  wow fadeInLeft">
-									<img src="images/banner-coin-1502714262.png" alt="banner-coin-1502714262.png">
-								</div>
-								<div class="col-xs-12 col-sm-6 wow fadeInRight">
-									<form class="contactAjax" action="contact">
-									    <p class="name">
-									        <input class="form-control" name="title" type="text" placeholder="Full Name" id="name" required="">
-									    </p>
-									    <p class="email">
-									        <input class="form-control" name="email" type="text" id="email" placeholder="Email" required="">
-									    </p>
-									    <p class="text">
-									        <input class="form-control" name="phone" type="text" placeholder="Phone" required="">
-									    </p>
-									    <p class="text">
-									        <input class="form-control" name="address" type="text" placeholder="Address" required="">
-									    </p>
-									    <p class="text">
-									        <textarea class="form-control md-textarea" name="content" placeholder="Message Content" required=""></textarea>
-									    </p>
-									    <button type="submit" class="btn btn-primary">
-									    <i class="fa fa-send"></i> Send
-									    </button>            
-									</form>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section><!-- /.block-whytrade -->
-			<section class="block block-comment wow fadeInLeft">
-				<div class="container">
-					<div class="block-content">
-						<ul  class="owl-carousel owl-theme dotsData" data-nav="false" data-dots="true" data-margin="30" data-responsive='{"0":{"items":1},"480":{"items":2},"600":{"items":2},"768":{"items":3},"800":{"items":3},"992":{"items":6}}'>
-							<li class="item"><img src="images/comment/partner-01-1503650703.jpg" alt="brand1"></li>
-							<li class="item"><img src="images/comment/partner-02-1503650709.jpg" alt="brand2"></li>
-							<li class="item"><img src="images/comment/partner-03-1503650715.jpg" alt="brand3"></li>
-							<li class="item"><img src="images/comment/partner-04-1503650721.jpg" alt="brand4"></li>
-							<li class="item"><img src="images/comment/partner-05-1503650731.jpg" alt="brand5"></li>
-							<li class="item"><img src="images/comment/partner-01-1503650703.jpg" alt="brand6"></li>
-							<li class="item"><img src="images/comment/partner-02-1503650709.jpg" alt="brand7"></li>
-							<li class="item"><img src="images/comment/partner-03-1503650715.jpg" alt="brand8"></li>
-							<li class="item"><img src="images/comment/partner-04-1503650721.jpg" alt="brand9"></li>
-							<li class="item"><img src="images/comment/partner-05-1503650731.jpg" alt="brand10"></li>
-						</ul>
-					</div>
-				</div>
-			</section><!-- /.block-comment -->
+				</div><!-- /.block-news -->
+			</section>
+			
 		</section><!-- /#main -->
 
 		<footer id="footer" class="wow fadeInUp">
