--- a/backend/login.html
+++ b/backend/login.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="plugins/Ionicons/css/ionicons.min.css">
         <!-- Style CSS -->
         <link rel="stylesheet" href="dist/css/style.css">
+        <!-- Responsive CSS -->
+        <link rel="stylesheet" href="dist/css/responsive.css">
         <!-- Import Font Google -->
         <link href="http://fonts.googleapis.com/css?family=Nunito:400,300" rel="stylesheet">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
