--- a/backend/upgrade-package.html
+++ b/backend/upgrade-package.html
@@ -27,8 +27,8 @@
         <!-- Bootstrap wysihtml5 - text editor -->
         <link rel="stylesheet" href="plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
         <link rel="stylesheet" href="plugins/animate/animate.css">
-        <!-- Style CSS -->
-        <link rel="stylesheet" href="dist/css/style.css">
+        <!-- Common CSS -->
+        <link rel="stylesheet" href="dist/css/common.css">
         <!-- Responsive CSS -->
         <link rel="stylesheet" href="dist/css/responsive.css">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
