--- a/frontend/index.html
+++ b/frontend/index.html
@@ -200,6 +200,85 @@
 					</div>
 				</div>
 			</section><!-- /.block-whytrade -->
+			<section class=" block block-news wow fadeInUp">
+				<div class="container">
+					<div class="block-title">
+						<h2 class="title-sec" data-wow-delay=".4s">News</h2>
+					</div>
+					<div class="row">
+						<ul>
+							<li class="col-sm-6 col-xs-12 col-12 news-home">
+								<div class="row">
+								    <div class="col-xs-4">
+								        <a href="#" title="">
+								        	<img src="images/news/tin-tuc-01-1503650079.jpg" alt="INSTANT WITHDRAWALS">
+								        </a>
+								    </div>
+								    <div class="col-xs-8">
+								        <div class="row">
+								            <a href="#" title="">
+								                <h2>INSTANT WITHDRAWALS</h2>
+								            </a>
+								            <p>Withdrawal requests are processed instantly 24/7. Investors may make unlimited amount of requests per day. There is no fee for withdrawals of hourly interest.</p>
+								        </div>
+								    </div>
+								</div>
+							</li><!-- /.news-home -->
+							<li class="col-sm-6 col-xs-12 col-12 news-home">
+							    <div class="row">
+							        <div class="col-xs-4">
+							            <a href="#" title="">
+							            	<img src="images/news/news-2-1503650198.jpg" title="AUTOMATIC INTEREST">
+							            </a>
+							        </div>
+							        <div class="col-xs-8">
+							            <div class="row">
+							                <a href="#" title="">
+							                    <h2>AUTOMATIC INTEREST</h2>
+							                </a>
+							                <p>Investor’s hourly profit will be added to account balance automatically. Investors can withdraw money instantly every hour.</p>
+							            </div>
+							        </div>
+							    </div>
+							</li><!-- /.news-home -->
+							<li class="col-sm-6 col-xs-12 col-12 news-home">
+						 		<div class="row">
+						 			<div class="col-xs-4">
+						 				<a href="#" title="">
+								        	<img src="images/news/news-3-1503650250.jpg" alt="INSTANT WITHDRAWALS">
+								        </a>
+						 			</div>
+						 			<div class="col-xs-8">
+						 				<div class="row">
+						 					<a href="#" title="">
+						 						<h2>DEPOSIT BACK ANYTIME</h2>
+						 					</a>
+						 					<p>Investors may withdraw their initial deposit at any time after 24 hours since depositing. There is a 5% transaction fee for service maintenance.</p>
+						 				</div>
+						 			</div>
+						 		</div>
+						 	</li><!-- /.news-home -->
+						 	<li class="col-sm-6 col-xs-12 col-12 news-home">
+							    <div class="row">
+							        <div class="col-xs-4">
+							            <a href="#" title="">
+								        	<img src="images/news/news-4-1503650285.jpg" alt="INSTANT WITHDRAWALS">
+								        </a>
+							        </div>
+							        <div class="col-xs-8">
+							            <div class="row">
+							                <a href="#" title="">
+							                    <h2>BANK LEVEL SECURITY</h2>
+							                </a>
+							                <p>This program is secured with EV SSL, which guarantees insurance to all transactions and encrypts all information provided. The highest DDOS protection is provided by DDOS-Guard!</p>
+							            </div>
+							        </div>
+							    </div>
+							</li><!-- /.news-home -->
+						</ul>
+					</div>
+				</div>
+			</section><!-- /.block-news -->
 			<section class="block block-comment wow fadeInLeft">
 				<div class="container">
 					<div class="block-content">
