--- a/backend/index.html
+++ b/backend/index.html
@@ -27,10 +27,8 @@
         <!-- Bootstrap wysihtml5 - text editor -->
         <link rel="stylesheet" href="plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
         <link rel="stylesheet" href="plugins/animate/animate.css">
-        <!-- Common CSS -->
-        <link rel="stylesheet" href="dist/css/common.css">
-        <!-- index CSS -->
-        <link rel="stylesheet" href="dist/css/index.css">
+        <!-- Style CSS -->
+        <link rel="stylesheet" href="dist/css/style.css">
         <!-- Responsive CSS -->
         <link rel="stylesheet" href="dist/css/responsive.css">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -181,7 +179,7 @@
                 <section class="content">
                     <div class="account_right" id="account_right">
                         <div class="title-home">BUSINESSCOIN EXCHANGE</div>
-                        <div class="block-new-form-top">
+                        <div class="block-new-form-top col-sm-12">
                             <div class="new-form-top">
                                 <div class="row">
                                     <div class="col-sm-4 col-xs-12">
@@ -192,10 +190,8 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-4 col-xs-12">
-                                        <div class="row">
-                                            <div class="new-form-content">
-                                                <span>100.000.000  BNC</span>
-                                            </div>
+                                        <div class="new-form-content">
+                                            <span>100.000.000  BNC</span>
                                         </div>
                                     </div>
                                     <div class="col-sm-4 col-xs-12">
@@ -217,10 +213,8 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-4 col-xs-12">
-                                        <div class="row">
-                                            <div class="new-form-content">
-                                                <span>01 BNC = 1.000 VND</span>
-                                            </div>
+                                        <div class="new-form-content">
+                                            <span>01 BNC = 1.000 VND</span>
                                         </div>
                                     </div>
                                     <div class="col-sm-4 col-xs-12">
@@ -242,10 +236,8 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-4 col-xs-12">
-                                        <div class="row">
-                                            <div class="new-form-content new-form-content-line">
-                                                <span>100.000.000 BNC<br>20/10/2017</span>
-                                            </div>
+                                        <div class="new-form-content new-form-content-line">
+                                            <span>100.000.000 BNC<br>20/10/2017</span>
                                         </div>
                                     </div>
                                     <div class="col-sm-4 col-xs-12">
