--- a/backend/login.html
+++ b/backend/login.html
@@ -13,8 +13,7 @@
         <link rel="stylesheet" href="plugins/material/material.css">
         <!-- <link rel="stylesheet" href="plugins/material/signin.css"> -->
         <!-- Style CSS -->
-        <link rel="stylesheet" href="dist/css/common.css">
-        <link rel="stylesheet" href="dist/css/login.css">
+        <link rel="stylesheet" href="dist/css/style.css">
         <!-- Responsive CSS -->
         <link rel="stylesheet" href="dist/css/responsive.css">
         <!-- Import Font Google -->
