--- a/backend/deposit.html
+++ b/backend/deposit.html
@@ -42,7 +42,7 @@
     <body class="hold-transition skin-red-light sidebar-mini">
         <div class="wrapper">
             <header class="main-header block-main-header">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <!-- mini logo for sidebar mini 50x50 pixels -->
                     <span class="logo-mini"><img src="dist/img/logo-secure-2017-10-22.png"></span>
                     <!-- logo for regular state and mobile devices -->
@@ -53,11 +53,11 @@
                     <span class="sr-only">Toggle navigation</span>
                     </a>
                     <div class="navbar-custom-menu">
-                        <ul class="nav navbar-nav navbar-right m-n nav-user navleader" style="float:right;margin-right:0px;">
+                        <ul class="nav navbar-nav navbar-right m-n nav-user navleader">
                             <li class="dropdown user user-menu">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src='dist/img/avatar.png' height='100px' class='user-image'>
-                                <span class="">ĐẶNG NGỌC DUYỆN (LIENKIMBNC)</span>
+                                    <img src='dist/img/avatar.png' height='100px' class='user-image'>
+                                    <span class="">ĐẶNG NGỌC DUYỆN (LIENKIMBNC)</span>
                                 </a>
                                 <ul class="dropdown-menu animated fadeInRight">
                                     <li>
@@ -76,9 +76,6 @@
                                 </ul>
                             </li>
                         </ul>
-                        <style>
-                            .navbar-nav>.user-menu .user-image{width: 45px;height: 45px;margin-top: -12px;margin-right:5px;}
-                        </style>
                     </div>
                 </nav><!-- /.navbar navbar-static-top -->
             </header><!-- /.main-header -->
@@ -87,45 +84,45 @@
                 <section class="sidebar">
                     <ul class="sidebar-menu block-menu" data-widget="tree">
                         <li class="treeview active">
-                            <a href="#">
-                                <i class="fa fa-dashboard  text-menu-cus"></i>
-                                <span> Dashboard</span>
+                            <a href="index.html">
+                                <i class="fa fa-dashboard text-menu-cus"></i>
+                                <span>Dashboard</span>
                             </a>
                         </li>
                         <li class="treeview">
-                            <a href="#">
-                                <i class="fa fa-sitemap  text-menu-cus"></i>
-                                <span> Member</span>
+                            <a href="member.html">
+                                <i class="fa fa-sitemap text-menu-cus"></i>
+                                <span>Member</span>
                             </a>
                         </li>
                         <li class="treeview">
-                            <a href="#">
-                                <i class="fa fa-exchange  text-menu-cus"></i>
-                                <span> Transaction</span>
+                            <a href="transaction.html">
+                                <i class="fa fa-exchange text-menu-cus"></i>
+                                <span>Transaction</span>
                             </a>
                         </li>
                         <li class="treeview">
-                            <a href="#">
-                                <i class="fa fa-user  text-menu-cus"></i>
-                                <span>Documentation</span>
+                            <a href="change-info.html">
+                                <i class="fa fa-user text-menu-cus"></i>
+                                <span>Change info</span>
                             </a>
                         </li>
                         <li class="treeview">
-                            <a href="#">
-                                <i class="fa fa-book"></i>
-                                <span> Change info</span>
+                            <a href="deposit.html">
+                                <i class="fa fa-money text-menu-cus"></i>
+                                <span>Deposit</span>
                             </a>
                         </li>
                         <li class="treeview">
-                            <a href="#">
-                                <i class="fa fa-money  text-menu-cus"></i>
-                                <span> Deposit</span>
+                            <a href="transaction-history.html">
+                                <i class="fa fa-history text-menu-cus"></i>
+                                <span>Transaction history</span>
                             </a>
                         </li>
                         <li class="treeview">
-                            <a href="#">
-                                <i class="fa fa-history  text-menu-cus"></i>
-                                <span> Transaction history</span>
+                            <a href="upgrade-package.html">
+                                <i class="fa fa-external-link-square text-menu-cus"></i>
+                                <span>Upgrade package</span>
                             </a>
                         </li>
                         <li class="treeview treeview_new treeview_new_top">
@@ -216,11 +213,11 @@
                                             <label class="col-sm-2 control-label"></label>
                                             <div class="col-sm-8">
                                                 <div class="form-group">
-                                                    <div class="col-full" style="text-align: center;">
+                                                    <div class="col-full text-center">
                                                         <span class="input-group-btn">
                                                         <button type="submit" onclick="return false;" class="btn-icon btn btn-primary"><i class="fa fa-plus"></i></button>
                                                         <input type="submit" value="Update" class="btn btn-primary" id="btnUpdate">
-                                                        <input type="reset" value="Reset" style="margin-left: 15px;" class="btn btn-default" id="btnReset">
+                                                        <input type="reset" value="Reset" class="btn btn-default ml15" id="btnReset">
                                                         </span>
                                                     </div>
                                                 </div>
