--- a/backend/login.html
+++ b/backend/login.html
@@ -53,7 +53,7 @@
     		</div>
     	</div><!-- /.signin_wrapper -->
 
-        <div class="modal fade" id="forgot" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="">
+        <div class="modal fade" id="forgot" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
