--- a/backend/upgrade-package.html
+++ b/backend/upgrade-package.html
@@ -42,7 +42,7 @@
     <body class="hold-transition skin-red-light sidebar-mini">
         <div class="wrapper">
             <header class="main-header block-main-header">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <!-- mini logo for sidebar mini 50x50 pixels -->
                     <span class="logo-mini"><img src="dist/img/logo-secure-2017-10-22.png"></span>
                     <!-- logo for regular state and mobile devices -->
@@ -53,11 +53,11 @@
                     <span class="sr-only">Toggle navigation</span>
                     </a>
                     <div class="navbar-custom-menu">
-                        <ul class="nav navbar-nav navbar-right m-n nav-user navleader" style="float:right;margin-right:0px;">
+                        <ul class="nav navbar-nav navbar-right m-n nav-user navleader">
                             <li class="dropdown user user-menu">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src='dist/img/avatar.png' height='100px' class='user-image'>
-                                <span class="">ĐẶNG NGỌC DUYỆN (LIENKIMBNC)</span>
+                                    <img src='dist/img/avatar.png' height='100px' class='user-image'>
+                                    <span class="">ĐẶNG NGỌC DUYỆN (LIENKIMBNC)</span>
                                 </a>
                                 <ul class="dropdown-menu animated fadeInRight">
                                     <li>
@@ -76,9 +76,6 @@
                                 </ul>
                             </li>
                         </ul>
-                        <style>
-                            .navbar-nav>.user-menu .user-image{width: 45px;height: 45px;margin-top: -12px;margin-right:5px;}
-                        </style>
                     </div>
                 </nav><!-- /.navbar navbar-static-top -->
             </header><!-- /.main-header -->
@@ -87,43 +84,43 @@
                 <section class="sidebar">
                     <ul class="sidebar-menu block-menu" data-widget="tree">
                         <li class="treeview active">
-                            <a href="#">
+                            <a href="index.html">
                                 <i class="fa fa-dashboard text-menu-cus"></i>
                                 <span>Dashboard</span>
                             </a>
                         </li>
                         <li class="treeview">
-                            <a href="#">
+                            <a href="member.html">
                                 <i class="fa fa-sitemap text-menu-cus"></i>
                                 <span>Member</span>
                             </a>
                         </li>
                         <li class="treeview">
-                            <a href="#">
+                            <a href="transaction.html">
                                 <i class="fa fa-exchange text-menu-cus"></i>
                                 <span>Transaction</span>
                             </a>
                         </li>
                         <li class="treeview">
-                            <a href="#">
+                            <a href="change-info.html">
                                 <i class="fa fa-user text-menu-cus"></i>
                                 <span>Change info</span>
                             </a>
                         </li>
                         <li class="treeview">
-                            <a href="#">
+                            <a href="deposit.html">
                                 <i class="fa fa-money text-menu-cus"></i>
                                 <span>Deposit</span>
                             </a>
                         </li>
                         <li class="treeview">
-                            <a href="#">
+                            <a href="transaction-history.html">
                                 <i class="fa fa-history text-menu-cus"></i>
                                 <span>Transaction history</span>
                             </a>
                         </li>
                         <li class="treeview">
-                            <a href="#">
+                            <a href="upgrade-package.html">
                                 <i class="fa fa-external-link-square text-menu-cus"></i>
                                 <span>Upgrade package</span>
                             </a>
@@ -205,7 +202,7 @@
                                                         <tr>
                                                             <td>1</td>
                                                             <td>LIENKIMBNC</td>
-                                                            <td><b style="color: red">-$ 500</b>
+                                                            <td><b class="text-red">-$ 500</b>
                                                             </td>
                                                             <td><b>You have been deducted $500, when upgrading $1000 membership package</b>
                                                             </td>
@@ -214,7 +211,7 @@
                                                         <tr>
                                                             <td>2</td>
                                                             <td>LIENKIMBNC</td>
-                                                            <td><b style="color: red">-$ 300</b>
+                                                            <td><b class="text-red">-$ 300</b>
                                                             </td>
                                                             <td><b>You have been deducted $300, when upgrading $500 membership package</b>
                                                             </td>
@@ -419,11 +416,7 @@
         <script src="dist/js/adminlte.min.js"></script>
         <!-- Loader -->
         <script src="plugins/loader/loader.js"></script>
-        <script>
-            $(function () {
-                //Initialize Select2 Elements
-                $('.select2').select2()
-            })
-        </script>
+        <!-- Commom JS -->
+        <script src="dist/js/commom.js"></script>
     </body>
 </html>
