--- a/frontend/download.html
+++ b/frontend/download.html
@@ -120,7 +120,7 @@
 						<table align="center" border="0" cellpadding="1" cellspacing="1" style="width:80%">
 							<tbody>
 								<tr>
-									<td style="text-align:center">
+									<td class="text-center">
 										<p class="img">
 											<a href="#" title="">
 												<img alt="" src="images/app/android.png">
@@ -128,7 +128,7 @@
 										</p>
 										<p class="txt">COMING SOON</p>
 									</td>
-									<td style="text-align:center">
+									<td class="text-center">
 										<p class="img">
 											<a href="#" title="">
 												<img alt="" src="images/app/ios.png">
